同步于: 12月20日10时2分

--- a/pages/p5/956422.md
+++ b/pages/p5/956422.md
@@ -1,4 +1,4 @@
-### 中国官方称粮食产量达最好水平 谎言被戳破(图)
+### 川普签署法令约束中概股 不守规矩就走人(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="粮食 玉米 进口" src="https://img2.secretchina.com/pic/2019/11-24/p2569012a759900918-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="川普 外国公司问责法 中概股" src="https://img2.secretchina.com/pic/2019/8-8/p2487071a740475581-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   多迹象表明粮食危机日益逼近。（图片来源：Adobe stock）
+   在美上市中国公司要接受美国监管机构的财务审计。（图片来源：eyetronic/Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,83 +21,69 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月24日讯】（看中国记者李正鑫综合报导）10月23日消息，中国可能发放更多
+  【看中国2020年12月20日讯】（看中国记者文龙综合报导）美国总统
   <strong>
-   玉米进口
-  </strong>
-  配额，而中国农业农村部却称，
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/粮食" target="_blank">
-    粮食
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
    </span>
+   (特朗普)
   </strong>
-  产量预计达到历史最好水平。多迹象表明粮食危机日益逼近，而玉米还涉及养殖、工业等多行业的需求难题。
+  12月18日签署《
+  <strong>
+   外国公司问责法
+  </strong>
+  》，意味着在美上市中国公司要接受美国监管机构的财务审计，否则这些
+  <strong>
+   中概股
+  </strong>
+  都要退市。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  中国每年大约需要2.8亿吨玉米，虽然此前已经进行了大量的储备，但现在几乎已经见底，促使买家转向购买大米和小麦等替代品，同时增加玉米进口。中国过去四年的
-  <span href="https://zh.wikipedia.org/zh-cn/%E7%8E%89%E7%B1%B3" target="_blank">
-   玉米
+  美国总统
+  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
+   川普
   </span>
-  消费量超过产量，从而刺激
-  <span href="https://zh.wikipedia.org/zh-cn/%E9%80%B2%E5%8F%A3" target="_blank">
-   进口
+  签署了法案，将会对在美上市的
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E6%A6%82%E8%82%A1" target="_blank">
+   中概股
   </span>
-  增加。随着中国囤积更多
-  <span href="https://zh.wikipedia.org/zh-cn/%E7%B2%AE%E9%A3%9F" target="_blank">
-   粮食
-  </span>
-  ，全球粮价势必会上涨。
+  公司予以约束。
  </p>
  <p>
-  中国目前对
-  <span href="https://www.secretchina.com/news/gb/tag/玉米" target="_blank">
-   玉米
+  《
+  <span href="https://www.secretchina.com/news/gb/tag/外国公司问责法" target="_blank">
+   外国公司问责法
   </span>
-  进口实行每年720万吨的低关税配额制度，配额之外的进口要面临高达购买价65%的关税。
+  》(Holding Foreign Companies Accountable Act)是对《2002年萨班斯-奥克斯利法案》（Sarbanes-Oxley Act of 2002）的补充，规定如果连续3年美国公众公司会计监督委员会(PCAOB)无法对一家外国公司的审计进行检查，美国证监会将禁止其在美国进行交易。
  </p>
  <p>
-  据《路透社》10月23日独家报道，北京当局将发放更多较低关税
-  <span href="https://www.secretchina.com/news/gb/tag/进口" target="_blank">
-   进口
+  《
+  <span href="https://zh.wikipedia.org/wiki/%E5%A4%96%E5%9C%8B%E5%85%AC%E5%8F%B8%E5%95%8F%E8%B2%AC%E6%B3%95%E6%A1%88" target="_blank">
+   外国公司问责法
   </span>
-  配额，在新的作物销售年度额外购买数百万吨玉米。据三位消息人士称，根据已批准额度，北京当局2020/21销售年度从美国订购了约1,200万吨玉米，从乌克兰等其它地区订购了约500万吨玉米。
+  》要求在美上市的外国公司必须在其审计报告中披露该公司被所在外国政府实体拥有其股份的比例；注册会计事务所所在的外国政府实体是否对这家公司有可控的财务利益。
  </p>
  <p>
-  据芝加哥经纪公司Futures International的资深分析师Terry Reilly称，“未来10年，
+  并且，这项法案还要求上市公司，披露它们是否被包括
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  可能会成为玉米进口大国，从而改变全球玉米市场的格局。”
+  共产党政府所拥有或控制：该公司或该公司的运作实体董事会中每一个中国共产党员的姓名；公司的章程或等效组织文件中是否包含了任何中国共产党的章程内容。
  </p>
  <p>
-  中国今年迄今预定的船货供应远超过官方年度玉米配额，一位消息人士透露，此前中粮集团获得并使用至少500万吨低关税配额订购的船货以美国玉米为主，交货日期一直到2021年4月。“首先是我们确实需要玉米。其次我们与美国达成的协议也要履行。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这位消息人士指的是中美达成的第一阶段贸易协议。
+  该法案5月在美国参议院无异议通过后，成为两院通过的跨党派法案，当地时间12月2日下午，美国国会众议院一致通过了该法案。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,7 +98,7 @@
   </div>
  </center>
  <p>
-  而在10月21日的新闻发布会上，中国农业农村部官员称，“农业农村经济保持了持续向好、稳中有进的态势。粮食丰收已成定局，预计产量达到历史最好水平……”。
+  该法案原始发起人共和党参议员约翰·肯尼迪（John Kennedy）和民主党参议员克里斯·范·霍伦（Chris Van Hollen）在众院通过了这一议案后发表声明：“共产中国现在正利用美国证券交易来剥削把退休金和大学储蓄投入上市公司的美国工人和家庭。美国的政策让中国无视美国公司遵守的规则，这很危险。今天，众议院与参议院共同拒绝了一个有毒的现状。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +113,7 @@
   </div>
  </center>
  <p>
-  针对官方的言论，中国民众质疑：“那玉米为何涨价，为何还用外汇从国外进口？”
+  尽管该法案适用于任何外国的公司，不过，其举措明显地指向中国在美上市公司，例如，阿里巴巴集团、拼多多和中石油等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +128,7 @@
   </div>
  </center>
  <p>
-  目前，中国玉米价格由于供应担忧涨至纪录新高，而今年稍早美国玉米价格则跌至10多年低点。这引起市场广泛关注，现货玉米的均价最高已超过2600元人民币/吨，期货价格也一度突破2600元（人民币，下同）大关，创下了2004年9月期货合约上市以来新高。虽然10月份中国东北地区新季玉米陆续收获上市，但新季玉米仍然维持高开高走，整体的价格还是一路上扬。
+  中国企业多年来利用美国资本市场和美元融资作为发展业务的关键资金之一，虽然该法案的下市条款将采阶段性实行，但这仍对不符合审计标准的中国企业构成实际冲击。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +143,7 @@
   </div>
  </center>
  <p>
-  玉米在下游饲料加工中被广泛使用，其用量比例占据整个饲料产量的50%以上。今年在玉米价格不断上涨的过程当中，生猪养殖的利润空间也因此不断被压缩，客观上也使得未来生猪养殖对于高价玉米的接受度大幅下降。其它下游都呈现出阶段性的亏损状态，部分深加工行业更是长期亏损，被迫降低设备开机率。
+  路易斯安那州共和党参议员John Kennedy在一份声明中说：“先前美国的政策允许中国可以无视美国企业应遵循的法律，这是非常危险的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +158,22 @@
   </div>
  </center>
  <p>
-  玉米也是工业方面的原料，主要是酒精、燃料乙醇，以及淀粉用的玉米，特别是酒精、燃料乙醇方面的需求陡增，也推高了玉米价格。
+  马里兰州民主党参议员Chris Van Hollen是该法案的提案人之一，他表示，除了要求中国企业需允许美国监管机构进行会计审计外，还要求这些企业需披露是否受到中共政府的控制。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  川普签署法案后，具体措施的实施主要仍取决于美国证券交易委员会(SEC)。12月18日，SEC主席Jay Clayton表示，将会确保 SEC的计划符合川普签署的法案。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +192,11 @@
   </ins>
  </center>
  <p>
-  并且玉米还涉及玉米油、玉米纤维饲料、玉米蛋白粉、生物天然气、纤维素乙醇产业链等。
+  根据SEC的统计，美国投资者的
+  <span href="https://www.secretchina.com/news/gb/tag/中概股" target="_blank">
+   中概股
+  </span>
+  风险敞口不断扩大。截至2019年，中国有超过150家公司在美国各大交易所挂牌，总市值达到1.2万亿美元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,11 +211,7 @@
   </div>
  </center>
  <p>
-  今年
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情全球流行，一度引发了国际粮食市场波动。联合国世界粮食计划署与粮农组织近期共同发布的《严重粮食不安全热点地区早期预警》，给出了具体的信息，“至少25个国家今年将面临严重饥荒风险，全球濒临50年来最严重的粮食危机。”
+  中概股（中国概念股）是指一系列以在中国大陆的资产或营收为其主体组成部分公司的股票。一般来说，中国概念股公司是以在海外上市的方式来获取境外投资的一种方式之一。目前境外上市的主要目的地包括香港证券交易所、纽约证交所、纳斯达克和美国证券交易所等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +226,7 @@
   </div>
  </center>
  <p>
-  为了确保本国供应，武汉肺炎疫情发生以来，俄罗斯、越南、埃及、印度等多个国家限制甚至停止粮食出口，全球粮食供应链受到很大冲击，一些严重依赖粮食进口的国家更是陷入了极大的被动。
+  美国上市公司会计监督理事会（PCAOB）长期以来一直抱怨中方没有履行备忘录指责，批准美方的信息请求，因为其对在美国交易所交易的中国公司的审计缺乏了解。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,11 +241,7 @@
   </div>
  </center>
  <p>
-  中国国家主席
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  在8月表态，“对粮食安全还是始终要有危机意识，今年全球疫情所带来的影响更是给我们敲响了警钟。”
+  事实上，通常在美国公开募集资金的公司必须经过SEC认证的会计公司的审计，这些审计工作还将受到PCAOB的监督。长久以来，北京当局以国家安全为由，禁止审计师的审计纪录被转移出国，因而造成中国企业虽然在美国上市，却不完全遵守美国证券法。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,27 +255,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  2020年4月，在纳斯达克上市的中国公司瑞幸咖啡爆出财务造假丑闻。6月29日，瑞幸咖啡摘牌退市。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -291,6 +269,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40oA"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -308,13 +324,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/24/950190.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956422.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956422.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956422.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/20/956422.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/950190.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/956422.md' width='0px' height='0px'/>
