--- a/indexes/p2.md
+++ b/indexes/p2.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看官场](S看官场.md) 
-
+#### [前财长楼继伟秘书 中国建银投资监事长张宏安被查(图)](../pages/p2/956391.md) 
+#### [中国一动物救护中心官员被曝请客吃东北虎狮子肉(图)](../pages/p2/956369.md) 
+#### [王岐山再出山？颜纯钩：子弹飞一会终将落地(图)](../pages/p2/956325.md) 
+#### [防政变？武警司令换人 太子党替太子党(图)](../pages/p2/956340.md) 
+#### [美国外交电文披露习近平击败李克强秘辛(图)](../pages/p2/956236.md) 
+#### [中共应急管理部长暴毙 恐涉高层内斗(图)](../pages/p2/956301.md) 
+#### [前财长楼继伟秘书 中国建银投资监事长张宏安被查(图)](../pages/p2/956391.md) 
+#### [中国一动物救护中心官员被曝请客吃东北虎狮子肉(图)](../pages/p2/956369.md) 
+#### [传习军改智囊力荐 上将赵宗岐被免去向不明(图)](../pages/p2/956392.md) 
+#### [王岐山再出山？颜纯钩：子弹飞一会终将落地(图)](../pages/p2/956325.md) 
+#### [防政变？武警司令换人 太子党替太子党(图)](../pages/p2/956340.md) 
+#### [美国外交电文披露习近平击败李克强秘辛(图)](../pages/p2/956236.md) 
+#### [中共应急管理部长暴毙 恐涉高层内斗(图)](../pages/p2/956301.md) 
+#### [备战打仗？习近平晋升四名上将(图)](../pages/p2/956281.md) 
+#### [北京开重磅会议 地方大员提前集结“拜码头”(图)](../pages/p2/956260.md) 
+#### [马云越来越危险？传调查组进驻阿里巴巴(图)](../pages/p2/956220.md) 
+#### [习近平心腹王小洪因迫害人权被举报(图)](../pages/p2/956108.md) 
+#### [中南海内斗升级 习借党媒抨击“投降派”(图)](../pages/p2/956101.md) 
+#### [王岐山才是真正的中共蓝金黄大佬(图)](../pages/p2/955990.md) 
+#### [习近平梦碎？逾百院士去世 名单曝光(图)](../pages/p2/956077.md) 
+#### [郑中原：蔡奇搞强拆护习“龙脉”争入常？(图)](../pages/p2/956072.md) 
+#### [周永康招供指派海外特工制造震惊全美的灭门案(图)](../pages/p2/955995.md) 
+#### [云南官员性侵4岁女童提前2年多出狱 引争议(图)](../pages/p2/955989.md) 
+#### [岁末人事变动诡异？张建春出任中宣部副部长(图)](../pages/p2/955968.md) 
+#### [传芮成钢出狱将赴香港任职 年薪400万港币(组图)](../pages/p2/955942.md) 
+#### [内蒙老巢被深查 刘云山现身潮汕捧习？(图)](../pages/p2/955941.md) 
