--- a/pages/soh6/455314.md
+++ b/pages/soh6/455314.md
@@ -46,7 +46,7 @@
   <ok href="/term/431755">
    林.伍德
   </ok>
-  再一次推到封了口浪尖。他表示，他手中掌握的证据做了很对备份，交给第三方，并告诉大众他绝不“自杀”。
+  再一次推到了风口浪尖。他表示，他手中掌握的证据做了很多备份，交给第三方，并告诉大众他绝不“自杀”。
  </p>
  <p>
   12月18日晚，林伍德打破了一天的沉寂，连续发出多个推文，继续炮轰舞弊官员，并呼吁美国民众继续传播真相。
