同步于: 12月20日20时52分

--- a/pages/nf4514/n12633433.md
+++ b/pages/nf4514/n12633433.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.20】各州集会 吁停止政变" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/Screen-Shot-2020-12-20-at-10.28.42-600x400.png"/>
+<div><img alt="【大选更新12.20】川普：戒严令是假新闻" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/Trump-boards-Air-Force-One-e1607884676699-700x420-600x400.jpg"/>
 <div class="caption">
- 美东时间周六下午，各州民众再次发起集会游行挺川普（特朗普）总统，呼吁制止窃取大选（Stop the Steal）, 这次加了一个口号“制止政变”（Stop the coup）图为凤凰城的集会。（新唐人截图）
+ 图为川普总统。 (Brendan Smialowski/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
