--- a/pages/nf4514/n12633433.md
+++ b/pages/nf4514/n12633433.md
@@ -1,4 +1,4 @@
-### 【大选更新12.20】各州集会 吁停止政变
+### 【大选更新12.20】川普：戒严令是假新闻
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -50,6 +50,30 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 川普：戒严令是假新闻
+</h3>
+<p>
+ 目前很多川普的支持者呼吁总统实施戒严，但是川普周六发推说，“戒严令＝假新闻”。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Martial law = Fake News. Just more knowingly bad reporting!
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1340523944680583169?ref_src=twsrc%5Etfw">
+   December 20, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 川普多次说，2020选举是美国历史上“最大的选举欺诈”，并说拜登在6个摇摆州都输了。
+</p>
+<p>
+ 他呼吁共和党战斗到底，“ 参院多数党领袖麦康奈尔和共和党参议员必须更加强硬，否则共和党将不复存在。我们以很大的优势赢得了总统大选。为它而战。不要让他们（民主党人）夺走它！”
+</p>
 <h3>
  拜登的气候政策 将导致失去数百万工作
 </h3>
