--- a/pages/nsc413/n12633433.md
+++ b/pages/nsc413/n12633433.md
@@ -244,8 +244,17 @@
 </p>
 <p>
  根据白宫的说法，大型电力系统的设备包括用于大容量电力系统变电站、控制室或发电厂的设备，包括核反应堆、电容器、变电站变压器、大型发电机和备用发电机，以及其它设备。
-</p>
-<p>
+ <br/>
+ 【
+ <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E6%9B%B4%E6%96%B0.html">
+  大选更新
+ </ok>
+ 12·19】请点击
+ <ok href="https://www.epochtimes.com/gb/20/12/19/n12631855.htm" rel="noopener noreferrer" target="_blank">
+  这里
+ </ok>
+ 。
+ <br/>
  责任编辑：李玲
 </p>
 </div>
