--- a/pages/soh6/455314.md
+++ b/pages/soh6/455314.md
@@ -1,4 +1,4 @@
-### 【林.伍德推文即时更新】 “反击的时刻到了”
+### 【林.伍德推文即时更新】 “爱国者们...只是热爱自由”
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
