--- a/pages/nf4514/n12633433.md
+++ b/pages/nf4514/n12633433.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新12.20】川普：戒严令是假新闻" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/Trump-boards-Air-Force-One-e1607884676699-700x420-600x400.jpg"/>
+<div><img alt="【大选更新12.20】YouTube删除川普律师的国会证词" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/4654d5921e3f4793661b666ab4b2c844-600x400.png"/>
 <div class="caption">
  图为川普总统。 (Brendan Smialowski/AFP via Getty Images)
 </div></div><hr/>
