--- a/pages/nsc413/n12633433.md
+++ b/pages/nsc413/n12633433.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月20日讯】（大纪元记者徐简、戴冬雪、谢佳宣综合报导）美东时间周六下午，美国各州民众再次发起集会游行挺
+ 【大纪元2020年12月20日讯】（大纪元记者徐简、戴芙若、谢佳宣综合报导）美东时间周六下午，美国各州民众再次发起集会游行挺
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
