--- a/pages/soh6/455563.md
+++ b/pages/soh6/455563.md
@@ -38,7 +38,9 @@
   以下是希望之声为您整合的12月20日（周日）选情新闻更新：
  </p>
  <h2>
-  Youtube视频删除一名证人的宣誓词
+  <strong>
+   Youtube视频删除一名证人的宣誓词
+  </strong>
  </h2>
  <p>
   根据川普阵营律师、参院听证会证人杰西·巴那尔（Jesse R.Binnall）的说法，YouTube在一份上传视频中删除了他在听证会前的宣誓词，这令人很费解。
@@ -74,9 +76,11 @@
   对此，原国家安全顾问、前陆军中将弗林评论说，“感谢巴那尔律师，以及James Lankford参议员筹备、聆听非常有说服力的证词，站出来反对在内华达州发生的令人震惊的欺诈行为。内华达州的公民们理应得到政客们更好的待遇。”
  </p>
  <h2>
-  <ok href="https://www.soundofhope.org/post/455614">
-   朱利安尼：川普团队将集中瞄准投票机证物
-  </ok>
+  <strong>
+   <ok href="https://www.soundofhope.org/post/455614">
+    朱利安尼：川普团队将集中瞄准投票机证物
+   </ok>
+  </strong>
  </h2>
  <p>
   川普总统的私人律师鲁迪·朱利安尼（Rudy Giuliani）说，该团队将采用不同的策略，并将更多地关注11月3日大选期间使用的投票机。
@@ -102,9 +106,11 @@
   “给我们八个小时的时间，我们将向您展示选举机器中有多少张虚假票以及如何用它来操纵投票”，他指出，总统可以“获得搜查所有选举机器的法令。 ”
  </p>
  <h2>
-  <ok href="https://www.soundofhope.org/post/455578">
-   佛州议员宣布1月6日挑战选举人团投票
-  </ok>
+  <strong>
+   <ok href="https://www.soundofhope.org/post/455578">
+    佛州议员宣布1月6日挑战选举人团投票
+   </ok>
+  </strong>
  </h2>
  <p>
   佛罗里达州众议院成员马特·盖茨（Matt Gaetz）说，他计划在1月6日的国会会议上质疑选举结果。
@@ -113,7 +119,9 @@
   “我不会回到从前的共和党人风格。我不会向罗姆尼（Mitt Romney）或者布什家庭一样有礼貌地宣布输掉竞选。如果你想要抽干沼泽，聘请一个佛罗里达人”，马特·盖茨周六（12月19日）在SAS2020峰会上说。
  </p>
  <h2>
-  川普：媒体过于夸大外国黑客袭击的影响
+  <strong>
+   川普：媒体过于夸大外国黑客袭击的影响
+  </strong>
  </h2>
  <p>
   美国总统川普表示，媒体正在过于夸大近日外国黑客对美国政府袭击造成的影响。
@@ -128,10 +136,12 @@
   川普表示，主流媒体的报道是虚假的，“我已经得到了充分的简报，一切都在控制之中”，他指出，目前媒体不愿意提及的是，很多海外威胁“其实来自中共（很可能！）”。
  </p>
  <h2>
-  <ok href="/term/18570">
-   川普团队
-  </ok>
-  向联邦高院递交宾州相关诉讼
+  <strong>
+   <ok href="/term/18570">
+    川普团队
+   </ok>
+   向联邦高院递交宾州相关诉讼
+  </strong>
  </h2>
  <p>
   周日，川普竞选团队向美国最高法院提起上诉，要求撤销宾夕法尼亚最高法院更改邮寄投票法的案件。
@@ -147,7 +157,9 @@
   该诉讼正在寻求“所有适当的补救措施”，其中包括撤回该州选举人票，并允许宾夕法尼亚州立法机关的选举人团替代票生效。在12月14日，共和党人在宾夕法尼亚州的选举人团将替代票投给川普和副总统彭斯。
  </p>
  <h2>
-  亚利桑那州马里科帕县拒绝审查投票机
+  <strong>
+   亚利桑那州马里科帕县拒绝审查投票机
+  </strong>
  </h2>
  <p>
   川普竞选团队表示，亚利桑那州最大县的监事会投票决定不遵守传票来审核选举机器，而此前川普阵营获权查看的选票则表明他们掌握了想要隐瞒的信息。
