同步于: 12月22日0时3分

--- a/pages/soh6/455563.md
+++ b/pages/soh6/455563.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="川普私人律師朱利安尼（資料圖 圖片來源：AP）" src="https://img.soundofhope.org/2020-12/1605680926328-1608488587386.png"/>
+<div><img alt="川普私人律师朱利安尼（资料图 图片来源：AP）" src="https://img.soundofhope.org/2020-12/1605680926328-1608488587386.png"/>
 <br/><figcaption class="caption">
- 川普私人律師朱利安尼（資料圖 圖片來源：AP）
+ 川普私人律师朱利安尼（资料图 图片来源：AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,39 +17,39 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年12月20日】（本台記者凌杉綜合報導）
+   【希望之声2020年12月20日】（本台记者凌杉综合报导）
   </span>
-  一名川普陣營證人曝光說，YouTube從參議院國土安全部選舉調查聽證會的視頻中刪除了他的宣誓詞。
+  一名川普阵营证人曝光说，YouTube从参议院国土安全部选举调查听证会的视频中删除了他的宣誓词。
  </p>
  <p>
-  川普私人律師朱利安尼表示，
-  <ok href="/term/18570?lang=b5">
-   川普團隊
+  川普私人律师朱利安尼表示，
+  <ok href="/term/18570">
+   川普团队
   </ok>
-  將落實新的戰略，下一步將集中瞄準獲取各個搖擺州的選舉機證物。
+  将落实新的战略，下一步将集中瞄准获取各个摇摆州的选举机证物。
  </p>
  <p>
-  週日，美國知名律師鮑威爾發佈推文說，“左派想盡一切辦法、用盡骯髒伎倆來阻止我們。但真相將大白於天下。他們現在被嚇壞了。”
+  周日，美国知名律师鲍威尔发布推文说，“左派想尽一切办法、用尽肮脏伎俩来阻止我们。但真相将大白于天下。他们现在被吓坏了。”
  </p>
  <p>
-  原國家安全顧問、前陸軍中將弗林發推說，“我們因爲勇敢纔有自由......自由是人類與生俱來的願望，但也決不是輕易獲得的。上帝保佑你，也願上帝保佑並永遠保護美國和美國人民的（自由）生活方式。”
+  原国家安全顾问、前陆军中将弗林发推说，“我们因为勇敢才有自由......自由是人类与生俱来的愿望，但也决不是轻易获得的。上帝保佑你，也愿上帝保佑并永远保护美国和美国人民的（自由）生活方式。”
  </p>
  <p>
-  以下是希望之聲爲您整合的12月20日（週日）選情新聞更新：
+  以下是希望之声为您整合的12月20日（周日）选情新闻更新：
  </p>
  <h2>
   <strong>
-   Youtube視頻刪除一名證人的宣誓詞
+   Youtube视频删除一名证人的宣誓词
   </strong>
  </h2>
  <p>
-  根據川普陣營律師、參院聽證會證人傑西·巴那爾（Jesse R.Binnall）的說法，YouTube在一份上傳視頻中刪除了他在聽證會前的宣誓詞，這令人很費解。
+  根据川普阵营律师、参院听证会证人杰西·巴那尔（Jesse R.Binnall）的说法，YouTube在一份上传视频中删除了他在听证会前的宣誓词，这令人很费解。
  </p>
  <p>
-  被刪除的誓詞中提到，證人的證詞都是依據確鑿證據做出的。
+  被删除的誓词中提到，证人的证词都是依据确凿证据做出的。
  </p>
  <p>
-  巴那爾發推寫道，“YouTube認爲，我依照誓言並根據確鑿的證據發表開幕詞，對您來說太危險了；他們將其刪除。迄今爲止，我們的證據從未遭到反駁，只是被忽略了。Google爲什麼如此害怕事實呢？”
+  巴那尔发推写道，“YouTube认为，我依照誓言并根据确凿的证据发表开幕词，对您来说太危险了；他们将其删除。迄今为止，我们的证据从未遭到反驳，只是被忽略了。Google为什么如此害怕事实呢？”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -60,127 +60,127 @@
   </div>
  </div>
  <p>
-  美國網友表示，該份宣誓詞在其他一些視頻中仍然有保存。
+  美国网友表示，该份宣誓词在其他一些视频中仍然有保存。
  </p>
  <p>
-  截止發稿前，YouTube方面尚未對此做出解釋。
+  截止发稿前，YouTube方面尚未对此做出解释。
  </p>
  <p>
-  在幾天前的參院選舉聽證會上，巴那爾揭露內華達州出現了大量的
-  <ok href="/term/13015?lang=b5">
-   選舉舞弊
+  在几天前的参院选举听证会上，巴那尔揭露内华达州出现了大量的
+  <ok href="/term/13015">
+   选举舞弊
   </ok>
-  案件，而該州政府“不允許進行司法鑑定”，“內華達州的一位官員將自己鎖在了辦公室，當川普的律師試圖將傳票給他時，他拒絕打開大門。”
+  案件，而该州政府“不允许进行司法鉴定”，“内华达州的一位官员将自己锁在了办公室，当川普的律师试图将传票给他时，他拒绝打开大门。”
  </p>
  <p>
-  對此，原國家安全顧問、前陸軍中將弗林評論說，“感謝巴那爾律師，以及James Lankford參議員籌備、聆聽非常有說服力的證詞，站出來反對在內華達州發生的令人震驚的欺詐行爲。內華達州的公民們理應得到政客們更好的待遇。”
+  对此，原国家安全顾问、前陆军中将弗林评论说，“感谢巴那尔律师，以及James Lankford参议员筹备、聆听非常有说服力的证词，站出来反对在内华达州发生的令人震惊的欺诈行为。内华达州的公民们理应得到政客们更好的待遇。”
  </p>
  <h2>
   <strong>
    <ok href="https://www.soundofhope.org/post/455614">
-    朱利安尼：川普團隊將集中瞄準投票機證物
+    朱利安尼：川普团队将集中瞄准投票机证物
    </ok>
   </strong>
  </h2>
  <p>
-  川普總統的私人律師魯迪·朱利安尼（Rudy Giuliani）說，該團隊將採用不同的策略，並將更多地關注11月3日大選期間使用的投票機。
+  川普总统的私人律师鲁迪·朱利安尼（Rudy Giuliani）说，该团队将采用不同的策略，并将更多地关注11月3日大选期间使用的投票机。
  </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
  <p>
-  朱利安尼告訴史蒂夫·班農的“戰爭室”，“新的策略將把大量精力集中在我們掌握的一些有關這些選舉機的證據上，這些證據可能會在一兩天的審覈中分離出來。”
+  朱利安尼告诉史蒂夫·班农的“战争室”，“新的策略将把大量精力集中在我们掌握的一些有关这些选举机的证据上，这些证据可能会在一两天的审核中分离出来。”
  </p>
  <p>
-  這位前紐約市市長表示，亞利桑那州州長杜西和喬治亞州州長肯普涉嫌在各自的州進行掩蓋舞弊行爲。他補充說，
-  <ok href="/term/18570?lang=b5">
-   川普團隊
+  这位前纽约市市长表示，亚利桑那州州长杜西和乔治亚州州长肯普涉嫌在各自的州进行掩盖舞弊行为。他补充说，
+  <ok href="/term/18570">
+   川普团队
   </ok>
-  希望審計賓夕法尼亞州、亞利桑那州、喬治亞州和密歇根州的投票機。
+  希望审计宾夕法尼亚州、亚利桑那州、乔治亚州和密歇根州的投票机。
  </p>
  <p>
-  朱利安尼告訴班農，“我認爲在週末後，您會看到我們採用了不同的策略。”
+  朱利安尼告诉班农，“我认为在周末后，您会看到我们采用了不同的策略。”
  </p>
  <p>
-  “給我們八個小時的時間，我們將向您展示選舉機器中有多少張虛假票以及如何用它來操縱投票”，他指出，總統可以“獲得搜查所有選舉機器的法令。 ”
+  “给我们八个小时的时间，我们将向您展示选举机器中有多少张虚假票以及如何用它来操纵投票”，他指出，总统可以“获得搜查所有选举机器的法令。 ”
  </p>
  <h2>
   <strong>
    <ok href="https://www.soundofhope.org/post/455578">
-    佛州議員宣佈1月6日挑戰選舉人團投票
+    佛州议员宣布1月6日挑战选举人团投票
    </ok>
   </strong>
  </h2>
  <p>
-  佛羅里達州衆議院成員馬特·蓋茨（Matt Gaetz）說，他計劃在1月6日的國會會議上質疑選舉結果。
+  佛罗里达州众议院成员马特·盖茨（Matt Gaetz）说，他计划在1月6日的国会会议上质疑选举结果。
  </p>
  <p>
-  “我不會回到從前的共和黨人風格。我不會向羅姆尼（Mitt Romney）或者布什家庭一樣有禮貌地宣佈輸掉競選。如果你想要抽乾沼澤，聘請一個佛羅里達人”，馬特·蓋茨週六（12月19日）在SAS2020峯會上說。
+  “我不会回到从前的共和党人风格。我不会向罗姆尼（Mitt Romney）或者布什家庭一样有礼貌地宣布输掉竞选。如果你想要抽干沼泽，聘请一个佛罗里达人”，马特·盖茨周六（12月19日）在SAS2020峰会上说。
  </p>
  <h2>
   <strong>
-   川普：媒體過於誇大外國黑客襲擊的影響
+   川普：媒体过于夸大外国黑客袭击的影响
   </strong>
  </h2>
  <p>
-  美國總統川普表示，媒體正在過於誇大近日外國黑客對美國政府襲擊造成的影響。
+  美国总统川普表示，媒体正在过于夸大近日外国黑客对美国政府袭击造成的影响。
  </p>
  <p>
-  “虛構新聞媒體中的網絡黑客情況要比實際情況要嚴重得多”， 川普發推文說。
+  “虚构新闻媒体中的网络黑客情况要比实际情况要严重得多”， 川普发推文说。
  </p>
  <p>
-  在前幾日，多家主流媒體報道美國政府、甚至五角大樓可能遭到黑客襲擊的新聞，並稱，相關襲擊造成影響很大。
+  在前几日，多家主流媒体报道美国政府、甚至五角大楼可能遭到黑客袭击的新闻，并称，相关袭击造成影响很大。
  </p>
  <p>
-  川普表示，主流媒體的報道是虛假的，“我已經得到了充分的簡報，一切都在控制之中”，他指出，目前媒體不願意提及的是，很多海外威脅“其實來自中共（很可能！）”。
+  川普表示，主流媒体的报道是虚假的，“我已经得到了充分的简报，一切都在控制之中”，他指出，目前媒体不愿意提及的是，很多海外威胁“其实来自中共（很可能！）”。
  </p>
  <h2>
   <strong>
-   <ok href="/term/18570?lang=b5">
-    川普團隊
+   <ok href="/term/18570">
+    川普团队
    </ok>
-   向聯邦高院遞交賓州相關訴訟
+   向联邦高院递交宾州相关诉讼
   </strong>
  </h2>
  <p>
-  週日，川普競選團隊向美國最高法院提起上訴，要求撤銷賓夕法尼亞最高法院更改郵寄投票法的案件。
+  周日，川普竞选团队向美国最高法院提起上诉，要求撤销宾夕法尼亚最高法院更改邮寄投票法的案件。
  </p>
  <p>
-  該訴訟試圖推翻該州最高法院裁定的三起案件，這些案件“在2020年
-  <ok href="/term/7400?lang=b5">
-   總統大選
+  该诉讼试图推翻该州最高法院裁定的三起案件，这些案件“在2020年
+  <ok href="/term/7400">
+   总统大选
   </ok>
-  前後立即”非法更改了郵寄投票法。相關裁決被指違反了《憲法》第二條和2000年布什訴戈爾案的裁決。相關案件要求最高法院在12月23日前做出迴應，並在12月24日之前作出答覆。
+  前后立即”非法更改了邮寄投票法。相关裁决被指违反了《宪法》第二条和2000年布什诉戈尔案的裁决。相关案件要求最高法院在12月23日前做出回应，并在12月24日之前作出答复。
  </p>
  <p>
-  該訴訟正在尋求“所有適當的補救措施”，其中包括撤回該州選舉人票，並允許賓夕法尼亞州立法機關的選舉人團替代票生效。在12月14日，共和黨人在賓夕法尼亞州的選舉人團將替代票投給川普和副總統彭斯。
+  该诉讼正在寻求“所有适当的补救措施”，其中包括撤回该州选举人票，并允许宾夕法尼亚州立法机关的选举人团替代票生效。在12月14日，共和党人在宾夕法尼亚州的选举人团将替代票投给川普和副总统彭斯。
  </p>
  <h2>
   <strong>
-   亞利桑那州馬里科帕縣拒絕審查投票機
+   亚利桑那州马里科帕县拒绝审查投票机
   </strong>
  </h2>
  <p>
-  川普競選團隊表示，亞利桑那州最大縣的監事會投票決定不遵守傳票來審覈選舉機器，而此前川普陣營獲權查看的選票則表明他們掌握了想要隱瞞的信息。
+  川普竞选团队表示，亚利桑那州最大县的监事会投票决定不遵守传票来审核选举机器，而此前川普阵营获权查看的选票则表明他们掌握了想要隐瞒的信息。
  </p>
  <p>
-  該州政府的委員會由四名共和黨人和一名民主黨人組成。投票以4-1投票反對了要求審查選舉機的傳票。相關人員拒絕置評。
+  该州政府的委员会由四名共和党人和一名民主党人组成。投票以4-1投票反对了要求审查选举机的传票。相关人员拒绝置评。
  </p>
  <p>
-  遞交的傳票來自馬里科帕縣高級法院的判決，當局要求該州選舉委員會提供選舉機以供檢查。
+  递交的传票来自马里科帕县高级法院的判决，当局要求该州选举委员会提供选举机以供检查。
  </p>
  <p>
-  <ok href="/term/18570?lang=b5">
-   川普團隊
+  <ok href="/term/18570">
+   川普团队
   </ok>
-  表示，相關做法顯然是違背法律的。
+  表示，相关做法显然是违背法律的。
  </p>
  <p class="meta-btm">
-  責任編輯：張莉莉
+  责任编辑：张莉莉
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
